Update description to match format specified by https://www.freedesktop.org/software/systemd/man/systemd.unit.html

--- a/systemd/.config/systemd/user/mpDris2.service
+++ b/systemd/.config/systemd/user/mpDris2.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=mpDris2 - Music Player Daemon D-Bus bridge
+Description=mpDris2 daemon
 BindsTo=mpd.service
 After=mpd.service dunst.service
 
