Move ranger to `stow` compatible location

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -44,8 +44,14 @@ set preview_images true
 # * urxvt-full:
 #   The same as urxvt but utilizing not only the preview pane but the
 #   whole terminal window.
-set preview_images_method w3m
+set preview_images_method kitty
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
 set colorscheme solarized
+
+# ===================================================================
+# == Local Options
+# ===================================================================
+# These only affect a single directory.
+setlocal path=~/Downloads sort mtime
