--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 *.wants/
+*.toml.save
+fish/.config/fish/completions/
+fish/.config/fish/conf.d/
+fish/.config/fish/fish_variables
+fish/.config/fish/fishd.*
+fish/.config/fish/fishfile
+fish/.config/fish/index.html
+ranger/.config/ranger/bookmarks
+ranger/.config/ranger/history
+ranger/.config/ranger/tagged
