--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -11,11 +11,12 @@ font_size 10.0
 # ┏━━━━━━━━━━━━━━━━━━━━━━━
 # ┃ Appearance
 # ┗━━━━━━━━━━━━━━━━━━━━━━━
-background #000000
+background #1a1a1a
 foreground #029A20
 cursor #93a1a1
 url_color #0087BD
 url_style curly
+hide_window_decorations yes
 
 # ┏━━━━━━━━━━━━━━━━━━━━━━━
 # ┃ Behaviour
@@ -25,4 +26,10 @@ map ctrl+shift+v paste_from_clipboard
 map ctrl+shift+plus change_font_size all +2.0
 map ctrl+shift+minus change_font_size all -2.0
 
+# fix copy paste when using wayland
+#sync_to_monitor no
 
+# kitty keeps freezing in sway...
+sync_to_monitor yes
+
+linux_display_server wayland
