--- a/i3status-rust/.config/i3status-rust/config.toml
+++ b/i3status-rust/.config/i3status-rust/config.toml
@@ -6,14 +6,18 @@ name = "awesome"
 # Choices: plain, solarized-dark, slick
 name = "solarized-dark"
 [theme.overrides]
-#separator = "<span font='DejaVu Mono Sans 10'>█</span>"
-#separator = "<span font='DejaVu Mono Sans 12'></span>"
+separator = "<span font='DejaVu Mono Sans 12'></span>"
 #separator_fg = "#ffffff"
 separator_bg = "auto"
 
 [[block]]
 block = "pacman"
 interval = 600
+
+#TODO
+#[[block]]
+#block = "custom"
+#command = "checkupdates && pikaur --query --sysupgrade --aur 2>/dev/null"
 
 [[block]]
 block = "custom"
@@ -25,9 +29,9 @@ on_click = "true"
 block = "music"
 player = "mpd"
 buttons = ["play", "prev", "next"]
-marquee_speed = 0.1
+marquee_speed = 0.8
 marquee_interval = 3
-max_width = 30
+max_width = 25
 
 [[block]]
 block = "disk_space"
@@ -41,7 +45,7 @@ alert = 10.0
 
 [[block]]
 block = "disk_space"
-path = "/mnt/hdd1"
+path = "/mnt/general"
 alias = "gen"
 info_type = "available"
 unit = "GB"
@@ -52,7 +56,7 @@ alert = 10.0
 [[block]]
 block = "memory"
 display_type = "memory"
-format_mem = "{Mum}MB({Mup}%)"
+format_mem = "{Mug}GB({Mupi}%)"
 format_swap = "{SUp}%"
 
 [[block]]
@@ -64,23 +68,33 @@ block = "load"
 interval = 1
 format = "{1m}"
 
+
+[[block]]
+block = "custom"
+command = "fish --command='check_vpn --barmode'"
+interval = 60
+
 [[block]]
 block = "net"
 device = "enp3s0"
 
-[[block]]
-block = "custom"
-command = "fish --command='echo $SOUND_SOURCE'"
-interval = 5
-on_click = "fish --command='switchaudio'"
+#[[block]]
+#block = "custom"
+#command = "fish --command='echo $SOUND_SOURCE'"
+#interval = 5
+#on_click = "fish --command='switchaudio'"
+
+#[[block]]
+#block = "custom_dbus"
+#name = "SoundDevice"
 
 [[block]]
 block = "sound"
 
-[[block]]
-block = "custom"
-interval = 5
-command = "dropbox-cli status | head --bytes=4"
+#[[block]]
+#block = "custom"
+#interval = 5
+#command = "dropbox-cli status | head --bytes=4"
 
 [[block]]
 block = "custom"
@@ -89,11 +103,17 @@ command = "fish --command=check_kernel"
 [[block]]
 block = "custom"
 # Show number of X11 apps running
-command = "xlsclients | wc --lines | while read line; do echo \"X clients: $line\"; done"
+command = "fish --command='check_xclients --barmode'"
 interval = 5
 
 #[[block]]
 #block = "ibus"
+
+#[[block]]
+#block = "custom"
+#command = "fish --command=ime_status"
+#on_click = "fish --command=ibus-toggle"
+#interval = 5
 
 #[[block]]
 #block = "weather"
@@ -101,6 +121,16 @@ interval = 5
 #service = { name = "openweathermap", api_key = "3bddca882b9b2c3e463785fb9f0df35d", city_id = "1862627", units = "metric" }
 
 [[block]]
+block = "custom"
+command = "fish --command=phone_battery_status"
+interval = 60
+
+[[block]]
+block = "custom"
+command = "fish --command=tv_status --barmode"
+interval = 60
+
+[[block]]
 block = "time"
-interval = 1
-format = "%a %d/%m %H:%M:%S"
+interval = 5
+format = "%a %d/%m %H:%M"
