--- a/systemd/.config/systemd/user/ibus.service
+++ b/systemd/.config/systemd/user/ibus.service
@@ -5,8 +5,7 @@ Documentation=man:ibus-daemon(1)
 [Service]
 Type=dbus
 BusName=org.freedesktop.IBus
-Environment=IBUS_SOCK=%t/ibus.socket
-ExecStart=/usr/bin/ibus-daemon --replace --xim --address unix:tmpdir=$IBUS_SOCK
+ExecStart=/usr/bin/ibus-daemon --address unix:tmpdir=%t/ibus.socket --replace --xim --panel disable --verbose
 
 [Install]
 WantedBy=default.target
