--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ fish/.config/fish/fish_variables
 fish/.config/fish/fishd.*
 fish/.config/fish/fishfile
 fish/.config/fish/index.html
+mpd/.config/mpd/state
 ranger/.config/ranger/bookmarks
 ranger/.config/ranger/history
 ranger/.config/ranger/tagged
