--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -42,7 +42,7 @@ pid_file			"~/.config/mpd/pid"
 # most variables to get MPD back into the same general shape it was in before
 # it was brought down. This setting is disabled by default and the server
 # state will be reset on server start up.
-state_file			"~/.config/mpd/state"
+state_file			"~/.cache/mpd/state"
 
 # The location of the sticker database.  This is a database which
 # manages dynamic information attached to songs.
