Try enabling replaygain again

--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -352,7 +352,7 @@ audio_output {
 # See <http://www.replaygain.org> for more details about ReplayGain.
 # This setting is off by default.
 #
-#replaygain			"album"
+replaygain			"auto"
 #
 # This setting sets the pre-amp used for files that have ReplayGain tags. By
 # default this setting is disabled.
@@ -374,7 +374,7 @@ audio_output {
 #replaygain_limit		"yes"
 #
 # This setting enables on-the-fly normalization volume adjustment. This will
-# result in the volume of all playing audio to be adjusted so the output has 
+# result in the volume of all playing audio to be adjusted so the output has
 # equal "loudness". This setting is disabled by default.
 #
 #volume_normalization		"no"
@@ -383,7 +383,7 @@ audio_output {
 
 # Character Encoding ##########################################################
 #
-# If file or directory names do not display correctly for your locale then you 
+# If file or directory names do not display correctly for your locale then you
 # may need to modify this setting.
 #
 #filesystem_charset		"UTF-8"
