--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -306,13 +306,12 @@ exec udiskie
 # Enable polkit auth for GUI apps
 exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
+exec mpv --title="washitsu" rtsp://10.9.8.135:7447/5a9e6fc05e0e9fb13861fc06_0 --mute=yes
+assign [title="washitsu"] 2
 
 for_window [app_id="mpv"] inhibit_idle fullscreen
 
 # TODO: permission denied on startup?
-exec_always $XDG_CONFIG_HOME/sway/import-gsettings \
-    gtk-theme:gtk-theme-name \
-    icon-theme:gtk-icon-theme-name \
-    cursor-theme:gtk-cursor-theme-name
+exec_always fish --command=import-gsettings
 
 exec ~/.local/bin/i3statusrs_dbus_server SoundDevice
