--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ fish/.config/fish/fish_variables
 fish/.config/fish/fishd.*
 fish/.config/fish/fishfile
 fish/.config/fish/index.html
+fish/.config/fish/functions/fisher.fish
 gtk-3.0/.config/gtk-3.0/bookmarks
 gtk-3.0/.config/gtk-3.0/servers
 mpd/.config/mpd/state
