Disable systemd dynamic users due to GPG key issue\n\nRe-enable when https://github.com/actionless/pikaur/issues/340 is fixed

--- a/pikaur/.config/pikaur.conf
+++ b/pikaur/.config/pikaur.conf
@@ -10,7 +10,8 @@ keepdevbuilddir = yes
 skipfailedbuild = no
 noedit = no
 nodiff = no
-alwaysusedynamicusers = yes
+# disable systemd dynamic users until #340 is fixed
+alwaysusedynamicusers = no
 donteditbydefault = no
 gitdiffargs = --ignore-space-change,--ignore-all-space
 
