--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ fish/.config/fish/functions/bass.fish
 fish/.config/fish/conf.d/done.fish
 fish/.config/fish/functions/humanize_duration.fish
 
+gtk-2.0/.config/gtk-2.0/gtkfilechooser.ini
 gtk-3.0/.config/gtk-3.0/bookmarks
 gtk-3.0/.config/gtk-3.0/servers
 mpd/.config/mpd/state
