--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -258,9 +258,8 @@ bindsym $mod+Shift+a exec fish --command=ibus-toggle
 bindsym $mod+Shift+r exec kitty --name=launcher -e "fish --command 'complete --do-complete | sort -u | fzf | xargs -r swaymsg -t command exec'"
 for_window [app_id="^launcher$"] floating enable, border none
 
-#bindsym $mod+grave exec python $XDG_CONFIG_HOME/sway/workspace-new.py
 bindsym $mod+grave exec fish --command=new_workspace
-bindsym $mod+Shift+grave exec fish --command=new_workspace --move-focused
+bindsym $mod+Shift+grave exec fish --command="new_workspace --move-focused"
 
 # ┏━━━━━━━━━━━━━━━━━━━━━━━━┓
 # ┃ Other config files
