--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -192,30 +192,39 @@ bindsym $mod+r mode "resize"
 # ┃ Status bar
 # ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
 # Read `man 5 sway-bar` for more information about this section.
-#bar {
-#    font pango:DejaVu Sans Mono, FontAwesome 10
-#    position top
-#    status_command i3status-rs $XDG_CONFIG_HOME/i3status-rust/config.toml
-#
-#    colors {
-#        separator #666666
-#        background #222222
-#        statusline #dddddd
-#        focused_workspace #0088CC #0088CC #ffffff
-#        active_workspace #333333 #333333 #ffffff
-#        inactive_workspace #333333 #333333 #888888
-#        urgent_workspace #2f343a #900000 #ffffff
-#    }
-#}
+bar {
+    font pango:DejaVu Sans Mono, FontAwesome 10
+    position top
+    #status_command i3status-rs $XDG_CONFIG_HOME/i3status-rust/config.toml
+    status_command /home/ammgws/projects/_gitgatgot_/statusbar_dbus/i3status-rust/target/debug/i3status-rs $XDG_CONFIG_HOME/i3status-rust/config.toml
+    colors {
+        separator #666666
+        background #222222
+        statusline #dddddd
+        focused_workspace #0088CC #0088CC #ffffff
+        active_workspace #333333 #333333 #ffffff
+        inactive_workspace #333333 #333333 #888888
+        urgent_workspace #2f343a #900000 #ffffff
+    }
+}
 
 #
 # Application hotkeys
 # ━━━━━━━━━━━━━━━━━━━━━━━━
 # NOTE: exec --no-startup-id is not supported in sway
 
+set $term kitty
 bindsym $mod+Return exec $term
 
-bindsym $mod+d exec $menu
+# Note: it's recommended that you pass the final command to sway
+#set $menu j4-dmenu-desktop --no-generic --dmenu="bemenu -i" --term="kitty" --usage-log=$XDG_CACHE_HOME/appmenu.history
+set $menu j4-dmenu-desktop --no-generic --dmenu="wofi --fork --show drun --allow-images" --term="kitty" --usage-log=$XDG_CACHE_HOME/appmenu.history
+#set $menu wofi --show drun -i | xargs swaymsg exec --
+bindsym $mod+d exec ibus engine xkb:us::eng && exec $menu
+
+set $_menu bemenu --fn "Monospace 12" --hf "#2B83A6" --tf "#2B83A6" --prompt
+set $prompt echo | $_menu
+
 
 bindsym $mod+Shift+g exec notify-send "Starting Chrome..." --expire-time=1500; exec google-chrome-stable
 bindsym $mod+g exec notify-send "Starting Firefox..." --expire-time=1500; exec env GDK_BACKEND=wayland firefox-nightly
