Add dark theme config

--- a/gtk-3.0/.config/gtk-3.0/settings.ini
+++ b/gtk-3.0/.config/gtk-3.0/settings.ini
@@ -5,6 +5,7 @@ gtk-icon-theme-name=Adwaita
 gtk-font-name=Roboto 10
 gtk-cursor-theme-name=ComixCursors-Slim-Blue
 #gtk-cursor-theme-name=Adapta-Nokto
+gtk-application-prefer-dark-theme=true
 
 # Currently installed themes:
 # find /usr/share/icons ~/.local/share/icons ~/.icons -type d -name "cursors"
