Use imv as image viewer

--- a/mimi/.config/mimi/mime.conf
+++ b/mimi/.config/mimi/mime.conf
@@ -1,6 +1,6 @@
 text/: xterm -e nano
 application/pdf: zathura
 video/: mpv
-image/: feh
+image/: imv
 audio/: vlc
 inode/directory: xterm -e ranger
