--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -277,8 +277,9 @@ bindsym $mod+ctrl+b exec swaylock
 bindsym Print exec fish --command=screenshot
 bindsym $mod+Print exec swaygrab $SCREENSHOT_DIR/temp.jpg
 
+bindsym --locked $mod+F3 exec fish --command=preview_outputs
 bindsym --locked $mod+F5 exec swaymsg output "*" dpms on
-bindsym --locked $mod+F7 exec fish --command=switchaudio
+bindsym --locked $mod+F7 exec fish --command="switchaudio --menu"
 bindsym --locked $mod+F8 exec fish --command=tv_toggle
 bindsym $mod+F9 exec fish --command=move_all_workspaces
 
