Update tmux config

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,2 +1,11 @@
-new-session -A -s $HOST
+#new-session -A -s poo
 set -g history-limit 30000
+# Enable truecolour support
+set -ga terminal-overrides ",xterm-kitty:Tc"
+set -g set-titles on
+set -g set-titles-string "#T"
+# More friendly split pane
+bind-key h split-window -h
+bind-key v split-window -v
+# Do not run as login shell
+set -g default-command "${SHELL}"
